--- a/index.html
+++ b/index.html
@@ -138,7 +138,9 @@
 
             <div class="b3">
                 <div class="ty">
-                    <img src="assets/icon-1.png" class="whitepaper" alt="" srcset="">
+                    <img src="assets/icon-1.png" class="whitepaper" alt="" srcset="" data-aos="fade-right"
+                    data-aos-offset="300"
+                    data-aos-duration="500">
                 </div>
 
                 <div class="ty-p" data-aos="fade-up"
